# HavokLib-blender

./: .gitignore  CMakeLists.txt
classgen/: CMakeLists.txt  format_new_metadata.py  generate_havok300metadata.py  havok300metadata.py  hk_base.py  hk_rootlevelcontainer.py  hka_animation_quantized.py  hka_bone_attachment.py  hka_ragdoll_instance.py  hka_skeleton_mapper.py  metadata.py
include/: havok_xml.hpp
include/hklib/: hk_base.hpp  hk_packfile.hpp  hka_animation.hpp  hkp_collision.hpp
include/internal/: hk_internal_api.hpp  hk_rootlevelcontainer.hpp  hka_animation.hpp  hka_quantized_encoder.hpp  hka_quantizedanimation.hpp  hka_spline_compressor.hpp  hka_splineanimation.hpp  hkp_collision.hpp
python/: hk_rootlevelcontainer.cpp  hka_skeleton.cpp
source/: CMakeLists.txt  core_motion.cpp  core_registry.cpp  fixups.hpp  format_new.cpp  format_new_write.cpp  format_old.cpp  format_old.hpp  format_old_write.cpp  hk_packfile.cpp  hka_delta_decompressor.cpp  hka_quantized_encoder.cpp  hka_spline_compressor.cpp  hka_spline_decompressor.cpp  hka_spline_decompressor.hpp  types_embed.cpp.in  types_embed.hpp
source/packfile/: hk_base.inl  hk_rootlevelcontainer.cpp  hk_rootlevelcontainer.inl  hka_animated_reference_frame.inl  hka_animated_reference_frame_default.cpp  hka_animated_reference_frame_default.inl  hka_animation.hpp  hka_animation.inl  hka_animation_binding.cpp  hka_animation_binding.inl  hka_animation_container.cpp  hka_animation_container.inl  hka_animation_delta.inl  hka_animation_interleaved.cpp  hka_animation_interleaved.inl  hka_animation_quantized.cpp  hka_animation_quantized.inl  hka_animation_spline.cpp  hka_animation_spline.inl  hka_animation_wavelet.inl  hka_skeleton.cpp  hka_skeleton.inl  hkp_collision.cpp  hkx_environment.cpp  hkx_environment.inl
source/packfile/custom/: hka_animation_lossless_compressed.inl
source/xml/: base.cpp
test/: havok.py
test/compiled_resources/: CMakeLists.txt
