find_package(Python3 REQUIRED COMPONENTS Interpreter)

set(HAVOK_CLASSGEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)

function(build_classes filename)
    execute_process(COMMAND ${Python3_EXECUTABLE} ${filename}.py WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} OUTPUT_VARIABLE VAR)
    get_filename_component(output_directory ${HAVOK_CLASSGEN_DIR}/${filename} DIRECTORY)
    file(MAKE_DIRECTORY ${output_directory})
    file(WRITE ${HAVOK_CLASSGEN_DIR}/${filename}.inl "${VAR}")
endfunction()

build_classes(hk_base)
build_classes(hka_skeleton)
build_classes(hkx_environment)
build_classes(hk_rootlevelcontainer)
build_classes(hka_animation)
build_classes(hka_animation_binding)
build_classes(hka_animation_container)
build_classes(hka_animation_interleaved)
build_classes(hka_animated_reference_frame)
build_classes(hka_animation_delta)
build_classes(hka_animation_spline)
build_classes(hka_animation_wavelet)
build_classes(hka_animation_quantized)
build_classes(custom/hka_animation_lossless_compressed)
build_classes(hka_animated_reference_frame_default)

set(HAVOK_CLASSGEN_DIR ${HAVOK_CLASSGEN_DIR} PARENT_SCOPE)
